--- a/index.html
+++ b/index.html
@@ -1,7 +1,1 @@
-<link rel="stylesheet" href="https://silasfonts.glitch.me/lexend.css">
-<p><br></p>
-<p><br></p>
-<p><br></p>
-<div style="text-align: center">
-<h1>Starlight Unblocker Reborn is coming soon!</h1>
-</div>
+<iframe src="https://ugby2egdxe.github.io" width="100%" height="100%">
